compiler/testData/diagnostics/tests/cast/IsErasedTasT.kt
fun <T> testing(a: T) = <!USELESS_IS_CHECK!>a is T<!>
